# upd-packet-studio

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.md  README.md  icon.icns
.cargo/: config.toml
.github/workflows/: release.yml
assets/mra/MRA_v1.4.0/: metaData.json
assets/mra/MRA_v1.4.0/MCRules/: 0x0000_mcrule.json  0x026B_mcrule.json  0x028E_mcrule.json  0x02A7_mcrule.json  0x05FD_mcrule.json
assets/mra/MRA_v1.4.0/definitions/: definitions.json
assets/mra/MRA_v1.4.0/devices/: 0x0134.json  0x0260.json  0x0263.json  0x02A7.json  0x05FD.json
assets/mra/MRA_v1.4.0/superClass/: 0x0000.json
docs/: collection_file_spec.md  log_format.md  mcp_and_milestone_management.md  third_party_licenses.md
locales/en/: main.ftl
locales/ja/: main.ftl
scripts/: build-macos-appstore.sh  build-macos.sh  format_macos_icon.py  generate-icns.sh
src/: config.rs  icon.rgba  lib.rs  main.rs  mra.rs  mra_defs.rs  styling.rs  types.rs  udp_worker.rs
src/views/: collections.rs  inspector.rs  log_viewer.rs  mod.rs  multicast.rs  sender.rs
tests/: gui_tests.rs  logic_tests.rs
