[package]
name = "udp-packet-studio"
version = "0.1.1"
edition = "2024"

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.34"
egui_dock = "0.19"
egui_extras = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rfd = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"


