[package]
name = "udp-packet-studio"
version = "1.0.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.34"
egui_dock = "0.19"
egui_extras = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rfd = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
egui-i18n = { version = "0.2", features = ["fluent"] }
sys-locale = "0.3.2"
get_if_addrs = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
